// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An icon on the right 1`] = `
.c7 {
  color: #F79572;
  background-color: transparent;
}

.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:last-child {
  margin-bottom: 16px;
}

.c1 > button {
  cursor: pointer;
}

.c4 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c5 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg,
.c2 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + .c3,
.c2 img + .c3 {
  padding-left: 1.5rem;
}

.c6 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <h4
          class="c5"
        >
          What is this
        </h4>
        <div
          class="c6"
        >
          Deiscription
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c7"
        color="#F79572"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </li>
</ul>
`;

exports[`Default style with icon on left 1`] = `
.c3 {
  color: #7B746F;
  background-color: transparent;
}

.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:last-child {
  margin-bottom: 16px;
}

.c1 > button {
  cursor: pointer;
}

.c5 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c6 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg,
.c2 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + .c4,
.c2 img + .c4 {
  padding-left: 1.5rem;
}

.c7 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
      <div
        class="c4 c5"
      >
        <h4
          class="c6"
        >
          What is this
        </h4>
        <div
          class="c7"
        >
          Deiscription
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Icon on both left and right 1`] = `
.c3 {
  color: #7B746F;
  background-color: transparent;
}

.c0 {
  color: #423E3C;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

.c1 {
  list-style-type: none;
}

.c1:last-child {
  margin-bottom: 16px;
}

.c1 > button {
  cursor: pointer;
}

.c5 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c6 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg,
.c2 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + .c4,
.c2 img + .c4 {
  padding-left: 1.5rem;
}

.c7 {
  color: #7B746F;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
      <div
        class="c4 c5"
      >
        <h4
          class="c6"
        >
          Turn inj the assignment
        </h4>
        <div
          class="c7"
        >
          CAS171 - Due Feb 15 at 11:59pm
          <br />
          What is going on
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-file-alt fa-w-12 fa-lg c3"
        data-icon="file-alt"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zm-22.6 22.7c2.1 2.1 3.5 4.6 4.2 7.4H256V32.5c2.8.7 5.3 2.1 7.4 4.2l83.9 83.9zM336 480H48c-8.8 0-16-7.2-16-16V48c0-8.8 7.2-16 16-16h176v104c0 13.3 10.7 24 24 24h104v304c0 8.8-7.2 16-16 16zm-48-244v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm0 64v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </li>
</ul>
`;
